tentando consertar o accordion

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
             <h6> Com uso de derivada </h6>
             <hr>
             <div class="accordion" id="derivadaAccordion">
-                <button class="btn btn-warning btn-block" onclick="SwitchDiv(5)" data-toggle="collapse" data-target="#metodo5"> Método da Bisseção </button>
-                <div id="metodo5" class="collapse" data-parent="derivadaAccordion">
+                <button class="btn btn-warning btn-block collapsed" onclick="SwitchDiv(5)" data-toggle="collapse" data-target="#metodo5"> Método da Bisseção </button>
+                <div id="metodo5" class="collapse" data-parent="#derivadaAccordion">
                     <div class="leitura">
                         <form id="formBissecao" class="form">
                             <div class="form-group">
@@ -199,7 +199,7 @@
                     </div>
                 </div>
                 <button class="btn btn-warning btn-block" onclick="SwitchDiv(6)" data-toggle="collapse" data-target="#metodo6"> Método de Newton </button>
-                <div id="metodo6" class="collapse" data-parent="derivadaAccordion">
+                <div id="metodo6" class="collapse" data-parent="#derivadaAccordion">
                     <div class="leitura">
                         <form id="formNewton" class="form">
                             <div class="form-group">
