--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="./js/plotly-latest.min.js"></script>
 </head>
 <body>
-    <header class="bg-dark text-white">
+    <header class="text-white">
         <div class="row">
             <div class="col">
                 <h1 class="ml-3" > <i class="fas fa-home" onclick="SwitchDiv(0)"></i> Pesquisa Operacional II  </h1>
@@ -33,7 +33,7 @@
             <h6> Sem uso de derivada </h6> <hr>
             <div class="accordion" id="accordionDiv">
                 <!-- ##### Botão da busca uniforme ##### -->
-                <button class="btn btn-light btn-block" onclick="SwitchDiv(1)" data-toggle="collapse" data-target="#metodo1" aria-expanded="false" aria-controls="metodo1">  
+                <button class="btn btn-dark btn-block" onclick="SwitchDiv(1)" data-toggle="collapse" data-target="#metodo1" aria-expanded="false" aria-controls="metodo1">  
                         Busca Uniforme </button>
                 <div id="metodo1" class="collapse" data-parent="#accordionDiv">
                     <div class="leitura">
@@ -68,7 +68,7 @@
                     </div>
                 </div> <!-- Fim do método da busca uniforme -->
                 <!-- ##### Botão da busca dicotômica ##### -->
-                <button class="btn btn-light btn-block" onclick="SwitchDiv(2)" data-toggle="collapse" data-target="#metodo2" aria-expanded="false" aria-controls="metodo2">  
+                <button class="btn btn-dark btn-block" onclick="SwitchDiv(2)" data-toggle="collapse" data-target="#metodo2" aria-expanded="false" aria-controls="metodo2">  
                     Busca Dicotômica </button> 
                 <div id="metodo2" class="collapse" data-parent="#accordionDiv">
                     <div class="leitura">
@@ -107,7 +107,7 @@
                     </div>
                 </div> <!-- Fim da busca dicotômica -->
                 <!-- ##### Botão da Seção Áuria ##### -->
-                <button class="btn btn-light btn-block" onclick="SwitchDiv(3)" data-toggle="collapse" data-target="#metodo3" aria-expanded=" " aria-controls="metodo3">  
+                <button class="btn btn-dark btn-block" onclick="SwitchDiv(3)" data-toggle="collapse" data-target="#metodo3" aria-expanded=" " aria-controls="metodo3">  
                     Seção Áurea </button>
                 <div id="metodo3" class="collapse" data-parent="#accordionDiv">
                     <div class="leitura">
@@ -138,7 +138,7 @@
                     </div>
                 </div> <!-- Fim da seção áuria -->
                 <!-- ##### Busca de Fibonacci -->
-                <button class="btn btn-light btn-block" onclick="SwitchDiv(4)" data-toggle="collapse" data-target="#metodo4" aria-expanded=" " aria-controls="metodo4">  
+                <button class="btn btn-dark btn-block" onclick="SwitchDiv(4)" data-toggle="collapse" data-target="#metodo4" aria-expanded=" " aria-controls="metodo4">  
                     Busca de Fibonacci </button>
                 <div id="metodo4" class="collapse" data-parent="#accordionDiv">
                     <div class="leitura">
@@ -173,7 +173,7 @@
             <h6> Com uso de derivada </h6>
             <hr>
             <div class="accordion" id="derivadaAccordion">
-                <button class="btn btn-light btn-block collapsed" onclick="SwitchDiv(5)" data-toggle="collapse" data-target="#metodo5"> Método da Bisseção </button>
+                <button class="btn btn-dark btn-block collapsed" onclick="SwitchDiv(5)" data-toggle="collapse" data-target="#metodo5"> Método da Bisseção </button>
                 <div id="metodo5" class="collapse" data-parent="#derivadaAccordion">
                     <div class="leitura">
                         <form id="formBissecao" class="form">
@@ -202,7 +202,7 @@
                         </form>
                     </div>
                 </div>
-                <button class="btn btn-light btn-block" onclick="SwitchDiv(6)" data-toggle="collapse" data-target="#metodo6"> Método de Newton </button>
+                <button class="btn btn-dark btn-block" onclick="SwitchDiv(6)" data-toggle="collapse" data-target="#metodo6"> Método de Newton </button>
                 <div id="metodo6" class="collapse" data-parent="#derivadaAccordion">
                     <div class="leitura">
                         <form id="formNewton" class="form">
@@ -311,10 +311,21 @@
                 </tbody>
             </table>
 
-            <p class="mt-3"> Principalmente nos métodos com derivada (Bisseção e Newton)
+            <p class="mt-3"> <strong> OBS: </strong> Principalmente nos métodos com derivada (Bisseção e Newton)
                 use função de x, nos outros métodos que não usa derivadas é possível usar 
                 outras variáveis, porém o resultado irá motrar as restrições como x .
              </p>
+
+             <h3 class="text-center mt-5"> Gráficos </h3>
+
+             <p> Do lado do botão de exemplos há um botão gráfico. Após uma função ser computada e ter o ponto minimo
+                 encontrado, é possível ver o gráfico da função e o ponto minimo encontrado. Linhas verticais marcam 
+                o intervalo que foi colocado para a busca ser feita.  </p>
+
+            <img src="./imgs/graficoExemplo.PNG" class="img-fluid" alt="">
+            <small class="text-muted"> Gráfico exemplo </small>
+
+            
 
             <div class="row mt-5">
                 <div class="col">
