Separado o arquivo do método, consertado o bug da busca uniforme, adicionado seleção da página pelo botão iniciar método

--- a/index.html
+++ b/index.html
@@ -856,5 +856,6 @@
     
     <script src="./libraries/math.js"></script>
     <script src="./js/script.js"></script>
+    <script src="./js/metodos.js"></script>
     <script src="./js/MostraResultados.js"></script>
 </body>
