colocado o nome do método no modal do gráfico

--- a/index.html
+++ b/index.html
@@ -840,8 +840,9 @@
                         </button>
                     </div>
                     <div class="modal-body graficos">
-                        <div id="avisoGrafico"></div>
+                        <div id="metodoCalculado" class="ultimoMetodo text-center"></div>
                         <div id="plot"></div>
+                        <div id="avisoGrafico"></div>
                     </div>                
                 </div>
             </div>
