--- a/index.html
+++ b/index.html
@@ -33,40 +33,42 @@
             <h6> Sem uso de derivada </h6> <hr>
             <div class="accordion" id="accordionDiv">
                 <!-- ##### Botão da busca uniforme ##### -->
-                <button class="btn btn-dark btn-block" onclick="SwitchDiv(1)" data-toggle="collapse" data-target="#metodo1" aria-expanded="false" aria-controls="metodo1">  
-                        Busca Uniforme </button>
-                <div id="metodo1" class="collapse" data-parent="#accordionDiv">
-                    <div class="leitura">
-                        <form id="uniforme">
-                            <div class="form-group">
-                                <label for="funcao1"> Digite a função: </label>
-                                <input type="text" class="form-control" id="funcao1" required>
-                            </div>
-                            <div class="form-group">
-                                <div class="row">
-                                    <div class="col">
-                                        <label for="inicio1"> Inicio </label>
-                                        <input type="text" class="form-control" id="inicio1" required>
+                    <button class="btn btn-dark btn-block" onclick="SwitchDiv(1)" data-toggle="collapse" data-target="#metodo1" aria-expanded="false" aria-controls="metodo1">  
+                    Busca Uniforme </button>
+                    <div id="metodo1" class="collapse show" data-parent="#accordionDiv">
+                            <div class="leitura">
+                                <form id="uniforme">
+                                    <div class="form-group">
+                                        <label for="funcao1"> Digite a função: </label>
+                                        <input type="text" class="form-control" id="funcao1" required>
                                     </div>
-                                    <div class="col">
-                                        <label for="final1"> Final </label>
-                                        <input type="text" class="form-control" id="final1" required>
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col">
+                                                <label for="inicio1"> Inicio </label>
+                                                <input type="text" class="form-control" id="inicio1" required>
+                                            </div>
+                                            <div class="col">
+                                                <label for="final1"> Final </label>
+                                                <input type="text" class="form-control" id="final1" required>
+                                            </div>
+                                        </div>
                                     </div>
-                                </div>
+                                    <div class="form-group">
+                                        <label for="delta1"> Digite o delta: </label>
+                                        <input type="text" class="form-control" id="delta1" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="qtdRefina"> Qtd. de vezes para refinar </label>
+                                        <input type="number" min='0' max='3' name="" id="qtdRefina" value = '1'> <i class="far fa-question-circle infoIcon popover-dismiss" role="button" data-toggle="popover" title="Busca refinada" data-content="Aqui você pode digitar a quantidade de vezes que o delta será divido por 10 para refinar a busca. Porém o máximo de vezes permitido por esse programa é 3 vezes. "></i>
+                                    </div>
+                                    <div class="alert alert-danger" id="alertFormUniforme"> Entrada de dados inválida! </div>
+                                    <button class="btn btn-success btn-block" type="submit"> Iniciar método </button>
+                                </form>
                             </div>
-                            <div class="form-group">
-                                <label for="delta1"> Digite o delta: </label>
-                                <input type="text" class="form-control" id="delta1" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="qtdRefina"> Qtd. de vezes para refinar </label>
-                                <input type="number" min='0' max='3' name="" id="qtdRefina" value = '1'> <i class="far fa-question-circle infoIcon popover-dismiss" role="button" data-toggle="popover" title="Busca refinada" data-content="Aqui você pode digitar a quantidade de vezes que o delta será divido por 10 para refinar a busca. Porém o máximo de vezes permitido por esse programa é 3 vezes. "></i>
-                            </div>
-                            <div class="alert alert-danger" id="alertFormUniforme"> Entrada de dados inválida! </div>
-                            <button class="btn btn-success btn-block" type="submit"> Iniciar método </button>
-                        </form>
-                    </div>
-                </div> <!-- Fim do método da busca uniforme -->
+                    </div> <!-- Fim do método da busca uniforme -->
+                
+                
                 <!-- ##### Botão da busca dicotômica ##### -->
                 <button class="btn btn-dark btn-block" onclick="SwitchDiv(2)" data-toggle="collapse" data-target="#metodo2" aria-expanded="false" aria-controls="metodo2">  
                     Busca Dicotômica </button> 
